# simp

./: ,manage  ,run  .gitignore  Containerfile  README.md  UnitContainerFile  compose-local.yml  compose-prd.yml  docker-compose.yml  pubber.py  pyproject.toml  simploadtest.py
config/: asgi.py  settings.py
core/: admin.py  ipc.py  models.py  sio.py  urls.py  views.py
core/management/commands/: zmqbroker.py
core/migrations/: 0001_versioning_trigger.py  0002_initial.py  0003_customer_versioning_trigger.py  0004_message.py  0005_message_name.py
core/templates/core/: bucket.html  chat.html  conway.html  customer.html  customer_base.html  customer_delete.html  customer_form.html  customer_list.html  datastar.html  index.html  llm.html  nats_pubsub.html  pyvalkey_pubsub.html  service_worker.html  sio.html  speculation_rules.html  speculation_rules_a.html  speculation_rules_b.html  spi.html  sw.js  task_count.html  valkey_pubsub.html  zmq_pubsub.html
core/templatetags/: coretags.py
db/: aconn.py  models.py
db/migrations/: 0001_versioning_trigger.py  0002_initial.py  0003_customer_versioning_trigger.py
docker-entrypoint-initdb.d/: init.sql
docker-entrypoint.d/: config.json
notebooks/: asyncio.ipynb  lifecycle.py  llm.ipynb
static/js/: htmx-ext-sse.min.js
