[project]
name = "simp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "daphne>=4.2.1",
    "django-restframework>=0.0.1",
    "django-template-partials>=24.4",
    "django>=5.2.4",
    "ipython>=9.4.0",
    "markitdown[all]>=0.1.2",
    "ollama>=0.5.1",
]

[tool.uv]
dev-dependencies = [
    "ipython>=9.4.0",
    "jupyterlab>=4.4.5",
    "urllib3>=2.5.0",
    "watchfiles>=1.1.0",
]
